auto-migration pain